--- a/index.html
+++ b/index.html
@@ -1038,10 +1038,10 @@
 
                 <!-- Week 4: 22-28 Feb 2026 -->
                 <div class="day-cell weekend">
-                    <div class="date-number">22</div>
+                    <div class="date-number">15</div>
                     <div class="time-slots">
-                        <div class="time-slot limited" onclick="book(22,'am')">เช้า 09:00-12:00</div>
-                        <div class="time-slot limited" onclick="book(22,'pm')">บ่าย 13:00-17:00</div>
+                        <div class="time-slot full">คิวเต็ม</div>
+                        <div class="time-slot full">คิวเต็ม</div>
                     </div>
                 </div>
                 <div class="day-cell">
