--- a/index.html
+++ b/index.html
@@ -1038,13 +1038,13 @@
 
                 <!-- Week 4: 22-28 Feb 2026 -->
                 <div class="day-cell weekend">
-                    <div class="date-number">15</div>
+                    <div class="date-number">22</div>
                     <div class="time-slots">
                         <div class="time-slot full">คิวเต็ม</div>
                         <div class="time-slot full">คิวเต็ม</div>
                     </div>
                 </div>
-                <div class="day-cell">
+                <div class="day-cell disabled">
                     <div class="date-number">23</div>
                     <div class="time-slots">
                         <div class="time-slot limited" onclick="book(23,'am')">เช้า 09:00-12:00</div>
