--- a/index.html
+++ b/index.html
@@ -1044,11 +1044,11 @@
                         <div class="time-slot full">คิวเต็ม</div>
                     </div>
                 </div>
-                <div class="day-cell">
+                <div class="day-cell disabled">
                     <div class="date-number">23</div>
                     <div class="time-slots">
-                        <div class="time-slot limited" onclick="book(23,'am')">เช้า 09:00-12:00</div>
-                        <div class="time-slot available" onclick="book(23,'pm')">บ่าย 13:00-17:00</div>
+                        <div class="time-slot full">คิวเต็ม</div>
+                        <div class="time-slot full">คิวเต็ม</div>
                     </div>
                 </div>
                 <div class="day-cell">
